test/tests/bad/conflicting-var-def_0.carth
;; ConflictingVarDef

(define foo +)
(define foo -)
